--- a/style.css
+++ b/style.css
@@ -35,12 +35,14 @@ body {
   font-size: 20px;
   transition: color 0.3s ease;
   font-family: arial;
+  font-weight: bold;
   justify-content: space-between;
   
 }
 
 #nav-links a:hover {
   color: #9b7e9b;
+  transform: translateY(-8px);
 }
 
 #btn {
@@ -57,6 +59,7 @@ body {
 
 #btn:hover {
   background-color: #8750f7;
+  transform: translateY(-8px);
 }
 
 .hero {
