--- a/style.css
+++ b/style.css
@@ -1107,7 +1107,7 @@ body {
 }
 
 .review-block__title {
-  font-size: 45px;
+  font-size: 42px;
   background: linear-gradient(to right, #8750f7, #ffffff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -1129,6 +1129,7 @@ body {
   flex: 2;
   display: flex;
   gap: 20px;
+  margin-left: 10%;
 }
 
 /* Card */
@@ -1136,7 +1137,8 @@ body {
   background-color:#160133;
   border-radius: 12px;
   padding: 20px;
-  width: 280px;
+  width: 320px;
+  height: 400px;
   border: #310031 2px solid;
   box-shadow: 0 6px 12px rgba(154, 70, 233, 0.2);
   transition: transform 0.3s ease;
